--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 mapboxgl.accessToken = 'pk.eyJ1Ijoic3JycmVhbCIsImEiOiJjaXBlYWw2ODMwMDRqdGJtYXhlcDBxdzlpIn0.WA-ajovZkQXhabmqxaZ70w';
 var map = new mapboxgl.Map({
     container: 'map', // container id
-    style: 'mapbox://styles/mapbox/streets-v9', //stylesheet location
+    
+    style: 'mapbox://styles/srrreal/citjwnasq000c2iqd204sma4g',
     center: [-74.50, 40], // starting position
     zoom: 9 // starting zoom
 });
