--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ var map = new mapboxgl.Map({
     container: 'map', // container id
     
     style: 'mapbox://styles/srrreal/citjwnasq000c2iqd204sma4g',
-    center: [-74.50, 40], // starting position
-    zoom: 9 // starting zoom
+   // center: [-74.50, 40], // starting position
+    zoom: 3 // starting zoom
 });
 </script>
 
