Add Name in Pop up

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@ map.on('click', function (e) {
     }
 
     var feature = features[0];
-
+	
+    
     // Populate the popup and set its coordinates
     // based on the feature found.
     var popup = new mapboxgl.Popup()
         .setLngLat(feature.geometry.coordinates)
-        .setHTML(feature.properties.description)
+        .setHTML(feature.properties.First + " " + feature.properties.Last)
         .addTo(map);
 });
 
